# pr2_pretouch

./: .gitignore  README  README.md  pr2_pretouch_grasping.rosinstall
pr2_pretouch/: CMakeLists.txt  package.xml
pr2_pretouch_firmware/: README
pr2_pretouch_firmware/microcontroller/: Makefile  finger.c
pr2_pretouch_firmware/microcontroller/dev/: finger_1_20111101.c  finger_1_20120131.c
pr2_pretouch_firmware/optical_ir/microcontroller/: Makefile  finger.c  finger_optical.c  optical_v1.c  optical_v1_no_spi.c
pr2_pretouch_firmware/optical_ir/picoblaze/: picoblaze_optical.s  picoblaze_optical_receiver.s
pr2_pretouch_firmware/picoblaze/: picoblaze_1.s  picoblaze_1_20111110.s  picoblaze_20111101.s
pr2_pretouch_firmware/seashell_effect/microcontroller/: finger_10bit.c
pr2_pretouch_firmware/seashell_effect/microcontroller/dev/: finger_1_20111110.c  finger_1_20111122.c
pr2_pretouch_firmware/seashell_effect/picoblaze/: picoblaze_1_20111122.s  picoblaze_1_20120131.s  picoblaze_1_20120202.s  picoblaze_2.hex  picoblaze_2_20110202.s
pr2_pretouch_firmware/wg006_gripper/: wg006_gripper_E_1.02_1771.bit  wg006_gripper_E_2.208_rev2005.bit  wg006_gripper_E_3.209_rev2032.bit
pr2_pretouch_grasp/: CMakeLists.txt  package.xml  setup.py
pr2_pretouch_grasp/include/pr2_pretouch_grasp/: .TabletopOctomapServer.h.swp  TabletopOctomapServer.h
pr2_pretouch_grasp/launch/: pr2_gripper_probabilistic_grasp_planner_cluster_server.launch  pr2_jt_controllers.launch  tabletop_octomap_server.launch
pr2_pretouch_grasp/src/: .TabletopOctomapServer.cpp.swp  TabletopOctomapServer.cpp  tabletop_octomap_server_node.cpp
pr2_pretouch_grasp/src/pr2_pretouch_grasp/: grasp_executer.py  pretouch_computer.py  pretouch_executor.py  pretouch_grasping_node.py  probabilistic_point_cluster_grasp_planner.py  probabilistic_point_cluster_grasp_planner_server.py
pr2_pretouch_msgs/: CMakeLists.txt  package.xml
pr2_pretouch_msgs/msg/: Grasp.msg  GraspableObject.msg  PretouchAcoustic.msg  Probe.msg  ProbeTarget.msg
pr2_pretouch_msgs/srv/: AddCloud.srv  AddPoint.srv  ExecutePretouch.srv  FindPretouch.srv  GetCloud.srv  GetProbabilisticPointCloud.srv  GraspPlanning.srv  Probe.srv
pr2_pretouch_pcb/myLibrary/: UW_PR2_FINERTIP_COMPONENTS.SchLib  UW_PR2_FINGERTIP_pcb.PcbLib
pr2_pretouch_pcb/pcb_optical/: optical.PcbDoc
pr2_pretouch_pcb/pcb_seashell/: seashell.PrjPcb  seashell.SchDoc
pr2_pretouch_sensor_hardware/: README.md
pr2_pretouch_sensor_hardware/fixture_solidworks/fixture_solidworks_optical/: pr2_finger_optical.SLDPRT
pr2_pretouch_sensor_hardware/fixture_solidworks/fixture_solidworks_pr2_original/: 68-03911-RA_pr2_modularity_grpr.eASM  PR2_MODULARITY_GRPR.sldprt  PR2_MODULARITY_GRPR_ASM.sldasm
pr2_pretouch_sensor_hardware/fixture_solidworks/fixture_solidworks_seashell/: pr2_finger_seashell_reference.SLDPRT  pr2_finger_seashell_sensing.SLDPRT
pr2_pretouch_sensor_hardware/pcb_altium/pcb_optical/: optical.PrjPcb  optical.SchDoc
pr2_pretouch_sensor_hardware/pcb_altium/pcb_seashell/: seashell.PcbDoc
pr2_pretouch_sensor_optical/: CMakeLists.txt  package.xml
pr2_pretouch_sensor_optical/launch/: optical_pretouch_r_gripper.launch
pr2_pretouch_sensor_optical/msg/: OpticalBeams.msg
pr2_pretouch_sensor_optical/src/: gui.py  pub_optical.py  visualizer.py
pr2_pretouch_sensor_seashell/: CMakeLists.txt  package.xml
pr2_pretouch_sensor_seashell/launch/: acoustic_pretouch_both_gripper.launch  acoustic_pretouch_l_gripper.launch  acoustic_pretouch_r_gripper.launch
pr2_pretouch_sensor_seashell/msg/: NoiseVolume.msg  SoundRaw.msg  SoundSpectrum.msg
pr2_pretouch_sensor_seashell/src/: acoustic_pretouch_one_hand.py  acoustic_pretouch_pyaudio.py  analyze_2ch_pyaudio.py  constant_noise.py  helper.py  pub_sound.py  record_wav_2ch_pyaudio.py
pr2_pretouch_sensors/: CMakeLists.txt  package.xml
pr2_pretouch_sensors/launch/: acoustic_pretouch_both_gripper.launch  acoustic_pretouch_l_gripper.launch  acoustic_pretouch_r_gripper.launch
pr2_pretouch_sensors/src/: acoustic_pretouch_one_hand.py  acoustic_pretouch_pyaudio.py  analyze_2ch.py  analyze_2ch_pyaudio.py  constant_noise.py  helper.py  kalman.py  pub_optical.py  pub_sound.py  record_wav_2ch.py  record_wav_2ch_pyaudio.py
