<?xml version="1.0"?>
<package>
  <name>pr2_pretouch_grasp</name>
  <version>0.1.0</version>
  <description>The pr2_pretouch_grasp package</description>

  <maintainer email="jianglt@uw.edu">Liang-Ting Jiang</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/pr2_pretouch_grasp</url> -->

  <author email="jianglt@uw.edu">Liang-Ting Jiang</author> -->


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_msgs</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pr2_pretouch_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>moveit_msgs</run_depend>
  <run_depend>octomap_server</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pr2_pretouch_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>uw_pr2_python</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
