<?xml version="1.0"?>
<package>
  <name>pr2_pretouch_sensor_optical</name>
  <version>0.1.0</version>
  <description>The pr2_pretouch_sensor_optical package</description>
  <author email="jianglt@uw.edu">Liang-Ting Jiang/author>
  <maintainer email="jianglt@uw.edu">Liang-Ting Jiang</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/jiang0131/pr2_pretouch_sensor_optical</url> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
  
</package>
